# ComfyUI-PresetDownloadManager

./: .gitignore  LICENSE  PUBLISHING_CHECKLIST.md  PUBLISHING_GUIDE.md  README.md  __init__.py  custom-presets.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
web/js/: preset_download_manager.js
