[project]
name = "comfyui-preset-download-manager"
description = "A custom ComfyUI node for managing and downloading models from HuggingFace with preset support"
version = "1.0.6"
license = { file = "LICENSE" }
dependencies = [
    "huggingface-hub>=0.34,<1.0",
    "aiohttp>=3.8,<4"
]

[project.urls]
Repository = "https://github.com/Smyshnikof/ComfyUI-PresetDownloadManager"

[tool.comfy]
PublisherId = "smyshnikof"
DisplayName = "Preset Download Manager"
Icon = ""

